# amr_3

./: .gitignore  data1.csv  pyproject.toml
assignment_3_2026/: controller.py  controller_alex_mpc.py  controller_alex_mpc_no_kalman.py  controller_ben.py  controller_cel.py  controller_complex_mpc.py  controller_original.py  controller_pid.py  data.csv  data1.csv  run.py  run_cel.py  run_debug.py  run_metrics.py  run_record.py  run_store.py  save_data.py  smoke_test_controller_alex.py  smoke_test_controller_random_targets.py  tune_controller_alex_mpc.py  tune_controller_alex_mpc_no_kalman_results.csv
data/: data.csv  data.ipynb  data_day2.csv  kalman_3x3.csv
data/day1/: experiment1.csv  experiment2.csv  experiment3.csv  experiment4.csv
data/day2/: experiment1.csv  experiment2.csv  experiment3.csv  experiment4.csv  experiment5.csv  experiment6.csv  experiment7.csv
