[project]
name = "amr-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pybullet>=3.2.7",
    "qpsolvers[open-source-solvers]>=4.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
