[project]
name = "amr-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "djitellopy>=2.5.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pybullet>=3.2.7",
    "pyvicon-datastream>=0.2.4",
    "qpsolvers[open-source-solvers]>=4.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
